# led-strip-display

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile
include/: led-strip-display.h
src/: c_api.rs  lib.rs  main.rs
src/backend/: mod.rs  sdl2_backend.rs  sdl3_backend.rs
